force-app/main/default/objects/Sampling_Detail__c/Sampling_Detail__c.object-meta.xml
<CustomObject>
    <label>Sampling Detail</label>
    <nameField>
        <displayFormat>SD{yyyy}{mm}{dd}{000000}</displayFormat>
        <label>出样明细编号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sampling Detail</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>