force-app/main/default/objects/Sampling_Detail__c/fields/AutomaticallyGenerateSampleStandard__c.field-meta.xml
<CustomField>
    <fullName>AutomaticallyGenerateSampleStandard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automatically Generate Sample Standard</label>
    <type>Checkbox</type>
</CustomField>