force-app/main/default/objects/Sampling_Detail__c/fields/Backup_Floorwalker_JP__c.field-meta.xml
<CustomField>
    <fullName>Backup_Floorwalker_JP__c</fullName>
    <formula>Shop__r.Backup_Floorwalker_JP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Backup Floorwalker(JP)</label>
    <type>Text</type>
</CustomField>