force-app/main/default/objects/Sampling_Detail__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <formula>Shop__r.Account_Name__c</formula>
    <label>客户</label>
    <type>Text</type>
</CustomField>