force-app/main/default/objects/Sampling_Detail__c/fields/Display_Status__c.field-meta.xml
<CustomField>
    <fullName>Display_Status__c</fullName>
    <description>实际出样状态</description>
    <label>展出状态</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Placement_Status</valueSetName>
    </valueSet>
</CustomField>