force-app/main/default/objects/Sampling_Detail__c/fields/Display_Type__c.field-meta.xml
<CustomField>
    <fullName>Display_Type__c</fullName>
    <description>展示类型</description>
    <label>Display Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>