force-app/main/default/objects/Sampling_Detail__c/fields/Display_Type_New__c.field-meta.xml
<CustomField>
    <fullName>Display_Type_New__c</fullName>
    <label>Display type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Display_Type_new</valueSetName>
    </valueSet>
</CustomField>