force-app/main/default/objects/Sampling_Detail__c/fields/ExhibitedForReporting__c.field-meta.xml
<CustomField>
    <fullName>ExhibitedForReporting__c</fullName>
    <description>展出记为1，未展出记为0</description>
    <formula>CASE(Display_Status__c, 
					&quot;展出&quot;, 1, 
					&quot;	未展出&quot;, 0,
					0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>已展出（报表计算）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>