force-app/main/default/objects/Sampling_Detail__c/fields/Hidden_Time__c.field-meta.xml
<CustomField>
    <fullName>Hidden_Time__c</fullName>
    <label>Hidden Time</label>
    <type>DateTime</type>
</CustomField>