force-app/main/default/objects/Sampling_Detail__c/fields/Is_Add__c.field-meta.xml
<CustomField>
    <fullName>Is_Add__c</fullName>
    <description>是否应出样</description>
    <label>是否上架</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>否</fullName>
            </value>
            <value>
                <fullName>是</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>