force-app/main/default/objects/Sampling_Detail__c/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <formula>text(Product__r.Product__c)</formula>
    <label>Product Category</label>
    <type>Text</type>
</CustomField>