force-app/main/default/objects/Sampling_Detail__c/fields/Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Id__c</fullName>
    <label>产品Id(后台使用)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>