force-app/main/default/objects/Sampling_Detail__c/fields/ProductLine__c.field-meta.xml
<CustomField>
    <fullName>ProductLine__c</fullName>
    <description>产品线</description>
    <formula>TEXT( Product__r.Product_Line__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Line</label>
    <type>Text</type>
</CustomField>