force-app/main/default/objects/Sampling_Detail__c/fields/R_Name__c.field-meta.xml
<CustomField>
    <fullName>R_Name__c</fullName>
    <formula>Shop__r.Responsible_Person__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>巡店员</label>
    <type>Text</type>
</CustomField>