force-app/main/default/objects/Sampling_Detail__c/fields/ReRe__c.field-meta.xml
<CustomField>
    <fullName>ReRe__c</fullName>
    <description>出样描述</description>
    <label>Sample Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>