force-app/main/default/objects/Sampling_Detail__c/fields/sales_region_f__c.field-meta.xml
<CustomField>
    <fullName>sales_region_f__c</fullName>
    <description>销售区域</description>
    <formula>TEXT( Shop__r.Sales_Region__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Region</label>
    <type>Text</type>
</CustomField>