force-app/main/default/objects/Sampling_Detail__c/fields/Sampling_Inspection_Date__c.field-meta.xml
<CustomField>
    <fullName>Sampling_Inspection_Date__c</fullName>
    <description>最新一次出样检查日期</description>
    <label>Sampling Inspection Date</label>
    <type>Date</type>
</CustomField>