force-app/main/default/objects/Sampling_Detail__c/fields/Sampling_Inspection_User__c.field-meta.xml
<CustomField>
    <fullName>Sampling_Inspection_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>最新一次巡店报告创建者</description>
    <label>Sampling Inspection User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sampling_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>