force-app/main/default/objects/Sampling_Detail__c/fields/Sampling_Standard__c.field-meta.xml
<CustomField>
    <fullName>Sampling_Standard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>出样标准</label>
    <referenceTo>Sampling_Standard__c</referenceTo>
    <relationshipLabel>出样明细</relationshipLabel>
    <relationshipName>Sampling_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>