force-app/main/default/objects/Sampling_Detail__c/fields/Sampling_Time__c.field-meta.xml
<CustomField>
    <fullName>Sampling_Time__c</fullName>
    <description>东盟出样申请，展出时间</description>
    <label>Sampling Time</label>
    <type>Date</type>
</CustomField>