force-app/main/default/objects/Sampling_Detail__c/fields/Shop__c.field-meta.xml
<CustomField>
    <fullName>Shop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>门店</label>
    <referenceTo>Shop__c</referenceTo>
    <relationshipLabel>出样明细</relationshipLabel>
    <relationshipName>Sampling_Detail_Shop</relationshipName>
    <type>Lookup</type>
</CustomField>