force-app/main/default/objects/Sampling_Detail__c/fields/Shop_Level__c.field-meta.xml
<CustomField>
    <fullName>Shop_Level__c</fullName>
    <description>门店等级</description>
    <formula>TEXT( Shop__r.Shop_Level__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>门店等级</label>
    <type>Text</type>
</CustomField>