force-app/main/default/objects/Sampling_Detail__c/fields/Sort__c.field-meta.xml
<CustomField>
    <fullName>Sort__c</fullName>
    <formula>IF( Sampling_Standard__r.Flag__c , 2, CASE( Display_Status__c , &apos;展出&apos;, 1, 3))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sort</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>