force-app/main/default/objects/Sampling_Detail__c/fields/Unplanned_Sample__c.field-meta.xml
<CustomField>
    <fullName>Unplanned_Sample__c</fullName>
    <label>计划外出样</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>否</fullName>
                <default>true</default>
                <label>否</label>
            </value>
            <value>
                <fullName>是</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>