force-app/main/default/objects/Sampling_Detail__c/validationRules/Check_Sales_Region.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Sales_Region</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(
ISPICKVAL(Shop__r.Sales_Region__c, &apos;Hisense Indonesia&apos;),
ISPICKVAL(Shop__r.Sales_Region__c, &apos;Hisense Chile&apos;),
ISPICKVAL(Shop__r.Sales_Region__c, &apos;Hisense South Africa&apos;),
ISPICKVAL(Shop__r.Sales_Region__c, &apos;Hisense Thailand&apos;),
ISPICKVAL(Shop__r.Sales_Region__c, &apos;Hisense Vietnam&apos;)
),
TEXT(Shop__r.Sales_Region__c)&lt;&gt;TEXT(Product__r.sales_region__c) 
)</errorConditionFormula>
    <errorMessage>Store Sales Region and Product Sales Region mismatch. Please reselect the Product.</errorMessage>
</ValidationRule>